--- a/bootstrap.css
+++ b/bootstrap.css
@@ -4853,6 +4853,7 @@ input[type="button"].btn-block {
 
 .breadcrumb-item + .breadcrumb-item {
   padding-left: 0.5rem;
+ 
 }
 
 .breadcrumb-item + .breadcrumb-item::before {
@@ -4871,7 +4872,7 @@ input[type="button"].btn-block {
 }
 
 .breadcrumb-item.active {
-  color: #919aa1;
+  color:  #ffffcc;
 }
 
 .pagination {
