--- a/bootstrap.css
+++ b/bootstrap.css
@@ -5097,7 +5097,7 @@ a.badge-dark:focus, a.badge-dark.focus {
 .jumbotron {
   padding: 2rem 1rem;
   margin-bottom: 2rem;
-  background-color: #f7f7f9;
+  background-color: #C9EDD7;
 }
 
 @media (min-width: 576px) {
