改成flask能正常顯示

--- a/Templates/Python.html
+++ b/Templates/Python.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-TW">
 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Python 程式設計</title>
-    <link rel="stylesheet" type="text/css" href="./bootstrap.css" />
+    <link rel="stylesheet" type="text/css" href="/static/bootstrap.css" />
     <style>
         body {
-            background-image: url(./image/242.jpg);
+            background-image: url(./static/242.jpg);
         }
 
         body>div:nth-child(2) {
@@ -39,7 +39,7 @@
 
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary" id="top">
-        <a class="navbar-brand" href="./index.html"><img src="./image/Tetrapods.jpg" width="40"></a>
+        <a class="navbar-brand" href="./index.html"><img src="./static/Tetrapods.jpg" width="40"></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01"
             aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -96,7 +96,7 @@
                 <h5 class="card-title">Python來由</h5>
                 <h6 class="card-subtitle text-muted">作者介紹</h6>
             </div>
-            <img src="./image/python data/1.png">
+            <img src="./static/python data/1.png">
             <div class="card-body">
                 <p class="card-text">Python 輸出 : print(“Hello! World”)</p>
             </div>
@@ -122,7 +122,7 @@
                 <h5 class="card-title">如何使用變數</h5>
                 <h6 class="card-subtitle text-muted">變數命名規則</h6>
             </div>
-            <img src="./image/python data/2.png">
+            <img src="./static/python data/2.png">
             <div class="card-body">
                 <p class="card-text">每種寫法關乎寫作習慣與不同時機(變數不是只有一種意義的變數)</p>
             </div>
@@ -145,7 +145,7 @@
                 <h5 class="card-title">如何使用運算子</h5>
                 <h6 class="card-subtitle text-muted">各種運算子簡寫</h6>
             </div>
-            <img src="./image/python data/3.png">
+            <img src="./static/python data/3.png">
             <div class="card-body">
                 <p class="card-text">divmod(被除數, 除數): 一次獲得商數與餘數
                 </p>
@@ -171,7 +171,7 @@
                 <h5 class="card-title">程式語言資料型態</h5>
                 <h6 class="card-subtitle text-muted">Python的資料型態</h6>
             </div>
-            <img src="./image/python data/4.png">
+            <img src="./static/python data/4.png">
             <div class="card-body">
                 <p class="card-text">Python 沒有所謂的字元 (character) 資料，如果字串含一個字元，我們稱這是含一個字元的字串。</p>
             </div>
@@ -198,7 +198,7 @@
                 <h5 class="card-title">Python輸入輸出</h5>
                 <h6 class="card-subtitle text-muted">可以利用help()來查詢</h6>
             </div>
-            <img src="./image/python data/5.png">
+            <img src="./static/python data/5.png">
             <div class="card-body">
                 <p class="card-text">help( ) 函數可以列出某一個 Python 的指令或函數的使用說明。</p>
             </div>
@@ -222,7 +222,7 @@
                 <h5 class="card-title">Pythone關係運算子</h5>
                 <h6 class="card-subtitle text-muted"> </h6>
             </div>
-            <img src="./image/python data/6.png">
+            <img src="./static/python data/6.png">
             <div class="card-body">
                 <p class="card-text"></p>
             </div>
@@ -249,7 +249,7 @@
                 <h5 class="card-title">Python中的陣列 : 清單</h5>
                 <h6 class="card-subtitle text-muted">mylist = ["apple", "banana", "cherry"]</h6>
             </div>
-            <img src="./image/python data/7.png">
+            <img src="./static/python data/7.png">
             <div class="card-body">
                 <p class="card-text">一個變數, 但是存了很多值 (洋芋片罐) 其他種這樣的可以存很多值的有
                     有順序性的
@@ -277,7 +277,7 @@
                 <h5 class="card-title">和list相似的</h5>
                 <h6 class="card-subtitle text-muted">像是無法被改變的list</h6>
             </div>
-            <img src="./image/python data/8.png">
+            <img src="./static/python data/8.png">
             <div class="card-body">
                 <p class="card-text"></p>
             </div>
@@ -302,7 +302,7 @@
                 <h5 class="card-title">迴圈</h5>
                 <h6 class="card-subtitle text-muted">fot // while</h6>
             </div>
-            <img src="./image/python data/9.png">
+            <img src="./static/python data/9.png">
             <div class="card-body">
                 <p class="card-text">有限時使用for，不清楚數量時使用while。</p>
             </div>
@@ -328,7 +328,7 @@
                 <h5 class="card-title">無序的集合</h5>
                 <h6 class="card-subtitle text-muted">無法按順序取出</h6>
             </div>
-            <img src="./image/python data/10.png">
+            <img src="./static/python data/10.png">
             <div class="card-body">
                 <p class="card-text"></p>
             </div>
@@ -352,7 +352,7 @@
                 <h5 class="card-title">字典</h5>
                 <h6 class="card-subtitle text-muted">{鍵(Key) : 值(value)} </h6>
             </div>
-            <img src="./image/python data/11.png">
+            <img src="./static/python data/11.png">
             <div class="card-body">
                 <p class="card-text"></p>
             </div>
@@ -377,7 +377,7 @@
                 <h5 class="card-title"></h5>
                 <h6 class="card-subtitle text-muted"></h6>
             </div>
-            <img src="./image/python data/12.png">
+            <img src="./static/python data/12.png">
             <div class="card-body">
                 <p class="card-text"></p>
             </div>
