--- a/Templates/WebApp.html
+++ b/Templates/WebApp.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-TW">
 
 <head>
     <meta charset="utf-8">
@@ -7,7 +7,7 @@
     <title>海景第一排</title>
 
 
-    <link rel="stylesheet" type="text/css" href="./bootstrap.css" />
+    <link rel="stylesheet" type="text/css" href="/static/bootstrap.css" />
 
     <link rel="stylesheet" href="http://ariakesangyo.co.jp/wp-content/themes/ariakesangyo/common/css/style.css?041208"
         type="text/css">
@@ -49,7 +49,7 @@
 
 <body id="home" class="home ja">
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary" id="top">
-        <a class="navbar-brand" href="./index.html"><img src="./image/Tetrapods.jpg" width="40"></a>
+        <a class="navbar-brand" href="./index.html"><img src="/static/Tetrapods.jpg" width="40"></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01"
             aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -98,7 +98,7 @@
         <section id="visual">
             <h2><span><img src="" alt="產業新尖兵-全端開發網頁設計"></span></h2>
             <ul class="slider visualFade">
-                <li><img src="./image/sea2.jpg" /></li>
+                <li><img src="/static/sea2.jpg" /></li>
             </ul>
             <div class="triangle"></div>
         </section>
@@ -110,10 +110,10 @@
         </div>
         <div class="slider">
             <ul class="storySlider">
-                <li><a href=""><img src="./image/1.jpg" width="290" height="290"></a></li>
-                <li><a href=""><img src="./image/2.jpg" width="290" height="290"></a></li>
-                <li><a href=""><img src="./image/3.jpg" width="290" height="290"></a></li>
-                <li><a href=""><img src="./image/4.jpg" width="290" height="290"></a></li>
+                <li><a href=""><img src="/static/1.jpg" width="290" height="290"></a></li>
+                <li><a href=""><img src="/static/2.jpg" width="290" height="290"></a></li>
+                <li><a href=""><img src="/static/3.jpg" width="290" height="290"></a></li>
+                <li><a href=""><img src="/static/4.jpg" width="290" height="290"></a></li>
 
             </ul>
         </div>
@@ -133,7 +133,7 @@
     </section>
     <article id="informationSec">
         <div id="informationSecInner">
-            <h2><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRB-SqzI-jIXFjatewkPQyp_G6qiY08tz4nYA&usqp=CAU"
+            <h2><img src="https://encrypted-tbn0.gstatic.co/statics?q=tbn:ANd9GcRB-SqzI-jIXFjatewkPQyp_G6qiY08tz4nYA&usqp=CAU"
                     alt="逢甲尖兵" width="151" height="150"></h2>
             <dl>
                 <dt>2021.04.12</dt>
@@ -155,25 +155,25 @@
         </div>
         <ul>
             <li><a href="#">
-                    <figure><img class="alignnone size-full wp-image-89" src="./image/4.jpg" alt="" width="380"
+                    <figure><img class="alignnone size-full w-static-89" src="/static/4.jpg" alt="" width="380"
                             height="240" sizes="(max-width: 380px) 100vw, 380px" /></figure>
                     <h3>待補</h3>
                     <p>輸入內容文字</p>
                 </a> </li>
             <li><a href="#">
-                    <figure><img class="alignnone size-full wp-image-90" src="./image/3.jpg" alt="" width="380"
+                    <figure><img class="alignnone size-full w-static-90" src="/static/3.jpg" alt="" width="380"
                             height="240" sizes="(max-width: 380px) 100vw, 380px" /></figure>
                     <h3>待補</h3>
                     <p>輸入內容文字</p>
                 </a> </li>
             <li><a href="#">
-                    <figure><img class="alignnone size-full wp-image-91" src="./image/2.jpg" alt="" width="380"
+                    <figure><img class="alignnone size-full w-static-91" src="/static/2.jpg" alt="" width="380"
                             height="240" sizes="(max-width: 380px) 100vw, 380px" /></figure>
                     <h3>待補</h3>
                     <p>輸入內容文字</p>
                 </a> </li>
             <li><a href="#" target="_blank">
-                    <figure><img class="alignnone size-full wp-image-92" src="./image/1.jpg" alt="" width="380"
+                    <figure><img class="alignnone size-full w-static-92" src="/static/1.jpg" alt="" width="380"
                             height="240" sizes="(max-width: 380px) 100vw, 380px" /></figure>
                     <h3>待補</h3>
                     <p>輸入內容文字</p>
