--- a/Templates/WebDesign.html
+++ b/Templates/WebDesign.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-TW">
 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Web 基礎網頁設計</title>
-    <link rel="stylesheet" type="text/css" href="./bootstrap.css" />
+    <link rel="stylesheet" type="text/css" href="./static/bootstrap.css" />
     <style>
         body {
             background-image: url('https://cdn.dribbble.com/users/6542125/screenshots/15436606/media/c8ce6885ca4358ed2d2909133eeaab66.jpg?compress=1&resize=1000x750');
@@ -66,7 +66,7 @@
 
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary" id="top">
-        <a class="navbar-brand" href="./index.html"><img src="./image/Tetrapods.jpg" width="40"></a>
+        <a class="navbar-brand" href="./index.html"><img src=".//static/Tetrapods.jpg" width="40"></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01"
             aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
