--- a/Templates/index.html
+++ b/Templates/index.html
@@ -1,18 +1,20 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-TW">
 
 <head>
+
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>海景第一排</title>
-    <link rel="stylesheet" type="text/css" href="./bootstrap.css" />
+    <title>{% block title %}海景第一排{% endblock %}</title>
+    <link rel="stylesheet" type="text/css" href="/static/bootstrap.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
         integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
         crossorigin="anonymous" />
+
     <style>
         body {
-            background-image: url(./image/18410.jpg);
+            background-image:  url('/static/18410.jpg') ;
             /*background-size: cover;*/
             background-size: 100vw;
         }
@@ -58,7 +60,7 @@
 
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary" id="top">
-        <a class="navbar-brand" href="./index.html"><img src="./image/Tetrapods.jpg" width="40"></a>
+        <a class="navbar-brand" href="./index.html"><img src="./static/Tetrapods.jpg" width="40"></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01"
             aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -80,7 +82,8 @@
                         <a class="dropdown-item" href="https://www.w3schools.com/html/default.asp">w3schools HTML</a>
                         <a class="dropdown-item" href="https://www.w3schools.com/css/default.asp">w3schools CSS</a>
                         <a class="dropdown-item" href="https://www.w3schools.com/js/default.asp">w3schools JS</a>
-                        <a class="dropdown-item" href="https://www.w3schools.com/bootstrap/bootstrap_ver.asp">w3schools Bootstrap</a>
+                        <a class="dropdown-item" href="https://www.w3schools.com/bootstrap/bootstrap_ver.asp">w3schools
+                            Bootstrap</a>
                     </div>
                 </li>
                 <li class="nav-item dropdown">
@@ -108,13 +111,13 @@
         </ol>
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="./image/sea2.jpg" class="d-block w-100" alt="阿圖片呢?">
+                <img src="./static/sea2.jpg" class="d-block w-100" alt="阿圖片呢?">
             </div>
             <div class="carousel-item">
-                <img src="./image/sea.jpg" class="d-block w-100" alt="阿圖片呢?">
+                <img src="./static/sea.jpg" class="d-block w-100" alt="阿圖片呢?">
             </div>
             <div class="carousel-item">
-                <img src="./image/sea1.jpg" class="d-block w-100" alt="阿圖片呢?">
+                <img src="./static/sea1.jpg" class="d-block w-100" alt="阿圖片呢?">
             </div>
         </div>
         <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -959,7 +962,7 @@
                 <h5 class="card-title">Special title treatment</h5>
                 <h6 class="card-subtitle text-muted">Support card subtitle</h6>
             </div>
-            <img src="./image/1.jpg">
+            <img src="./static/1.jpg">
             <div class="card-body">
                 <p class="card-text">沒圖 先放隻可愛貓貓</p>
             </div>
@@ -982,7 +985,7 @@
                 <h5 class="card-title">Special title treatment</h5>
                 <h6 class="card-subtitle text-muted">Support card subtitle</h6>
             </div>
-            <img src="./image/2.jpg">
+            <img src="./static/2.jpg">
             <div class="card-body">
                 <p class="card-text">沒圖 先放隻可愛貓貓</p>
             </div>
@@ -1005,7 +1008,7 @@
                 <h5 class="card-title">Special title treatment</h5>
                 <h6 class="card-subtitle text-muted">Support card subtitle</h6>
             </div>
-            <img src="./image/3.jpg">
+            <img src="./static/3.jpg">
             <div class="card-body">
                 <p class="card-text">沒圖 先放隻可愛貓貓</p>
             </div>
@@ -1028,7 +1031,7 @@
                 <h5 class="card-title">Special title treatment</h5>
                 <h6 class="card-subtitle text-muted">Support card subtitle</h6>
             </div>
-            <img src="./image/4.jpg">
+            <img src="./static/4.jpg">
             <div class="card-body">
                 <p class="card-text">沒圖 先放隻可愛貓貓</p>
             </div>
