--- a/project/Templates/Python.html
+++ b/project/Templates/Python.html
@@ -2,7 +2,7 @@
 {% from 'bootstrap/form.html' import render_form %}
 {% block title %}Python程式設計{% endblock %}
 
-{% block head%}<link rel="stylesheet" href="{{ url_for('static', filename='CSS/Python.css') }}">{% endblock head %}
+{% block head%}<link rel="stylesheet" href="{{ url_for('static', filename='CSS/page2.css') }}">{% endblock head %}
 {% block content %}
 <div class="container">
     <ol class="breadcrumb">
