--- a/project/Templates/Database.html
+++ b/project/Templates/Database.html
@@ -1,91 +1,7 @@
-<!DOCTYPE html>
-<html lang="zh-TW">
+{% extends "bootstrap/base.html" %}
+{% from 'bootstrap/form.html' import render_form %}
+{% block title %}資料庫{% endblock %}
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>資料庫應用</title>
-    <link rel="stylesheet" type="text/css" href="./bootstrap.css" />
-    <style>
-        body {
-            background-color: lightblue;
-        }
-
-        footer {
-            background-color: rgb(82, 82, 82);
-            color: rgb(255, 255, 255);
-            display: grid;
-            grid-template-columns: repeat(12, 1fr);
-        }
-
-        footer>div:nth-child(1) {
-            grid-column: 2;
-        }
-
-        footer>div:nth-child(2) {
-            grid-column: 6;
-        }
-
-        footer>div:nth-child(3) {
-            grid-column: -2;
-        }
-    </style>
-</head>
-
-<body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-primary" id="top">
-        <a class="navbar-brand" href="./index.html"><img src="./image/Tetrapods.jpg" width="40"></a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01"
-            aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-
-        <div class="collapse navbar-collapse" id="navbarColor01">
-            <ul class="navbar-nav mr-auto">
-                <li class="nav-item active">
-                    <a class="nav-link" href="./index.html">Home
-                        <span class="sr-only">(current)</span>
-                    </a>
-                </li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button"
-                        aria-haspopup="true" aria-expanded="false">Web 基礎網頁設計</a>
-                    <div class="dropdown-menu">
-                        <a class="dropdown-item" href="./WebDesign.html">Web 基礎網頁設計</a>
-                        <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="https://www.w3schools.com/html/default.asp">w3schools HTML</a>
-                        <a class="dropdown-item" href="https://www.w3schools.com/css/default.asp">w3schools CSS</a>
-                        <a class="dropdown-item" href="https://www.w3schools.com/js/default.asp">w3schools JS</a>
-                        <a class="dropdown-item" href="https://www.w3schools.com/bootstrap/bootstrap_ver.asp">w3schools Bootstrap</a>
-                    </div>
-                </li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button"
-                        aria-haspopup="true" aria-expanded="false">Python 程式設計</a>
-                    <div class="dropdown-menu">
-                        <a class="dropdown-item" href="./Python.html">Python 程式設計</a>
-                        <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="https://www.w3schools.com/python/default.asp">w3schools
-                            Python</a>
-                    </div>
-                </li>
-            </ul>
-            <form class="form-inline my-2 my-lg-0">
-                <input class="form-control mr-sm-2" type="text" placeholder="Search">
-                <button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button>
-            </form>
-        </div>
-    </nav>
-
-
-    <footer>
-        <div>組員名單:</div>
-        <div>E-mail:</div>
-        <div><a href="#top" style="color: lightyellow;">Back to Top</a></div>
-    </footer>
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
-</body>
-
-</html>
+{% block head%}<link rel="stylesheet" href="{{ url_for('static', filename='CSS/index.css') }}">{% endblock head %}
+{% block content %}
+{% endblock content %}
